--- a/package.json
+++ b/package.json
@@ -161,5 +161,6 @@
   },
   "engines": {
     "node": ">=20.17.0"
-  }
+  },
+  "packageManager": "pnpm@8.6.12+sha1.a2f983fbf8f2531dc85db2a5d7f398063d51a6f3"
 }
